--- a/index.Rmd
+++ b/index.Rmd
@@ -3,35 +3,26 @@ title: 'Work in Progress - Do not use!'
 output: html_document
 ---
 
-
-```{r plots, echo = F, cache = F, message = F}
+```{r libraries, echo = F, message = F, warning = F}
 library(lubridate, warn.conflicts = F)
+library(plotly, warn.conflicts = F)
+library(ggplot2, warn.conflicts = F)
+```
+
+```{r data, echo = F}
 germany <- read.csv("data/clean/data_ger_bundl.csv")
 italy <- read.csv("data/clean/data_italy_regions.csv")
+```
 
+```{r plots, echo = F, cache = F, message = F}
 make_plot <- function(df, country_name) {
-
-    df <- df[, c("date", "day", "reg0.name", "tot.cases")]
-    df <- reshape(df, v.names = "tot.cases", idvar = "date",
-        timevar = "reg0.name", direction = "wide")
-    df <- df[order(df$date), -3]
-
-    whole_country <- rowSums(df[, - (1:2)])
-    below_hundred_cases <- max(max(which(whole_country < 100)), 1)
-
-    dates <- seq(
-        ymd(df$date[below_hundred_cases]) + 3,
-        length.out = nrow(df) - below_hundred_cases,
-        by = "1 day")
-
-    regions <- substr(names(df)[- (1:2)], start = 11, stop = 100)
-    n_regions <- length(regions)
-
-    matplot(dates, df[ - (1:below_hundred_cases), - (1:2)], axes = F, type = "l", col = 1:n_regions, lty = 1:n_regions, xlab = "Date", ylab = "Total cases", log = "y", main = paste0("Spread of COVID-19 in regions of ", country_name))
-    legend("topleft", legend = regions, col = 1:n_regions, cex = .5, lty = 1:n_regions)
-    axis(1, dates, format(dates, "%b %d"), cex.axis = .4)
-    axis(2)
-    box()
+    ggplot(df, aes(x = ymd(date), y = tot.cases, color = reg0.name)) +
+        geom_line() +
+        theme_minimal() +
+        xlab("Date") + ylab("Total cases") +
+        labs(color = "Region") +
+        scale_y_log10()
+    ggplotly()
 }
 
 ```
