--- a/index.Rmd
+++ b/index.Rmd
@@ -143,7 +143,7 @@ plots <- lapply(countries, make_plot)
 out <- lapply(seq_along(plots), function(i) {
 
   a1 <- knitr::knit_expand(text = sprintf("### %s\n", countries[i])) # tab header, auto extracts names of `hcs`
-  a2 <- knitr::knit_expand(text = "\n```{r, echo = F}") # start r chunk
+  a2 <- knitr::knit_expand(text = "\n```{r, echo = F, fig.width = 10}") # start r chunk
   a3 <- knitr::knit_expand(text = sprintf("\nplots[[%d]]", i)) # extract graphs by "writing" out `hcs[[1]]`, `hcs[[2]]` etc. to be rendered later
   a4 <- knitr::knit_expand(text = "\n```\n") # end r chunk
 
