--- a/index.Rmd
+++ b/index.Rmd
@@ -92,8 +92,9 @@ make_plot <- function(country_name) {
         filter(tot.cases > 20)
 
     ggplot(estimates, aes(x = date, y = R.H)) +
-        geom_line(data = ~head(., -2), alpha = 1) +
+        geom_line(data = ~head(., -2), alpha = 1, show.legend = TRUE) +
         geom_line(data = ~tail(., 3), alpha = .3, linetype = 2) +
+        scale_color_manual(values = c("blue")) +
         # bug in ggplotly, so we have to split our lines into two pieces
         # see https://github.com/tidyverse/ggplot2/issues/2006
         geom_ribbon(
@@ -121,7 +122,7 @@ make_plot <- function(country_name) {
         ) +
         labs(
             title = paste0("Reproduction number for ", country_name, " over time"),
-            x = "day",
+            x = "date",
             y = "R(t)"
         )
 
