--- a/index.Rmd
+++ b/index.Rmd
@@ -112,17 +112,17 @@ make_plot <- function(country_name) {
                     xref = "paper",
                     y0 = 1, y1 = 1,
                     line = list(color = "red", dash = "dot")
-                    ),
-                list(
-                    type = "line",
-                    x0 = 0, x1 = 1,
-                    xref = "paper",
-                    y0 = 2.4, y1 = 2.4,
-                    line = list(color = "red", dash = "dot")
-                )
+                    )#,
+#                list(
+#                    type = "line",
+#                    x0 = 0, x1 = 1,
+#                    xref = "paper",
+#                    y0 = 2.4, y1 = 2.4,
+#                    line = list(color = "red", dash = "dot")
+#                )
                 ),
             yaxis = list(
-                type = "log", 
+                type = "log",
                 title = "R(t)",
                 tickmode = "array",
                 tickvals = 1:10,
@@ -142,14 +142,14 @@ make_plot <- function(country_name) {
                 type = "date",
                 tickformat = "%d-%m"
             )
-        ) 
+        )
 }
 
 ```
 
 ## {.tabset .tabset-fade}
 
-Explanation of what we do.
+Created by [AG Stochastik](https://www.tu-ilmenau.de/stochastik/), [Technische Universität Ilmenau](https://www.tu-ilmenau.de/).
 
 <!--
 See https://github.com/rstudio/flexdashboard/issues/80#issuecomment-247139450
@@ -180,5 +180,21 @@ out <- lapply(seq_along(plots), function(i) {
 ```
 
 `r paste(knitr::knit(text = paste(out, collapse = '\n')))`
+
+Explanations (see the [Technical Report]() for details):
+- We estimate the **reproduction rate** $R(t)$ at day $t$, i.e. the average number of people someone infected at time $t$ would infect if conditions remained the same.
+- The estimator has been taken from [(Fraser 2007)][1] with (asymptotic) 95% confidence intervals derived using the delta method.
+- Estimates and confidence intervals are shown in black, corresponding to the left axis (on a log-scale).
+- The **critical value** for the reproduction number is $1$, shown as a red horizontal line: a value larger than one results in an exponential increase of infections, a value smaller than one in a decrease.
+- The analysis is based on *newly reported cases* per day, shown as blue bars corresponding to the right axis (on a linear scale).
+- We use the data provided by [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19), updating our graphics daily.
+- Note that cases are reported much later than the corresponding day of infection, namely after incubation time and some more days necessary for testing and reporting the case to the authorities. For simplicity we assume that cases are reported 7 days after infection.
+- In a population where no countermeasures have been put into place, the reproduction number is believed to be given by some value between 2.4 and 3.3. Estimates higher than that may be explained by a large number of imported cases before the day being considered.
+- Since the estimator is based on assumptions about the infectivity of the virus, and given that the data are not perfect because of a change of reporting criteria, the amount of testing etc., the estimates should be cautiously interpreted and not be taken at face value. However, we believe one can draw qualitatively correct conclusions from them.
+
+### References ###
+
+[1]: Fraser, C. (2007). *Estimating Individual and Household Reproduction
+Numbers in an Emerging Epidemic.* PLOS ONE 2 (8), [https://doi.org/10.1371/journal.pone.0000758](https://doi.org/10.1371/journal.pone.0000758).
 
 ##
