--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Work in Progress - Do not use!'
+title: 'Estimating reproduction rates over time for monitoring the spread of COVID-19'
 output: html_document
 ---
 
@@ -26,7 +26,7 @@ johns_hopkins <- read.csv("data/clean/data_world_jh.csv")
 
 ## {.tabset .tabset-fade}
 
-Created by [AG Stochastik](https://www.tu-ilmenau.de/stochastik/), [Technische Universität Ilmenau](https://www.tu-ilmenau.de/).
+Created by [AG Stochastik](https://www.tu-ilmenau.de/stochastik/), [Technische Universität Ilmenau](https://www.tu-ilmenau.de/) in collaboration with [Prof. Dr. A. Krämer](https://ekvv.uni-bielefeld.de/pers_publ/publ/PersonDetail.jsp?personId=21463&lang=de), [School of Public Health](https://www.uni-bielefeld.de/gesundhw/index.html), [Universität Bielefeld](https://www.uni-bielefeld.de/).
 
 <!--
 See https://github.com/rstudio/flexdashboard/issues/80#issuecomment-247139450
@@ -55,7 +55,7 @@ plots <- lapply(countries, function(country_name) {
             conf.level = 1 - alpha,
             pad.zeros = TRUE
         ))
-    
+
     plot_repronum(estimates, country_name)
 })
 
@@ -77,17 +77,19 @@ out <- lapply(seq_along(plots), function(i) {
 
 Explanations (see the [Technical Report]() for details):
 
-- We estimate the **reproduction rate** $R(t)$ at day $t$, i.e. the average number of people someone infected at time $t$ would infect if conditions remained the same.
-- The estimator has been taken from [(Fraser 2007)][1] with (asymptotic) 95% confidence intervals derived using the delta method.
-- Estimates and confidence intervals are shown in black, corresponding to the left axis (on a log-scale).
-- The **critical value** for the reproduction number is $1$, shown as a red horizontal line: a value larger than one results in an exponential increase of infections, a value smaller than one in a decrease.
-- The analysis is based on *newly reported cases* per day, shown as blue bars corresponding to the right axis (on a linear scale).
-- We use the data provided by [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19), updating our graphics daily.
-- Note that cases are reported much later than the corresponding day of infection, namely after incubation time and some more days necessary for testing and reporting the case to the authorities. For simplicity we assume that cases are reported 7 days after infection.
-- In a population where no countermeasures have been put into place, the reproduction number is believed to be given by some value between 2.4 and 3.3. Estimates higher than that may be explained by a large number of imported cases before the day being considered.
-- Since the estimator is based on assumptions about the infectivity of the virus, and given that the data are not perfect because of a change of reporting criteria, the amount of testing etc., the estimates should be cautiously interpreted and not be taken at face value. However, we believe one can draw qualitatively correct conclusions from them.
+- We estimate the **reproduction number** *R(t)* at day *t*, i.e. the average number of people someone infected at time *t* would infect if conditions remained the same.
+- The estimator has been taken from [(Fraser 2007)](#ref1). It compares the number of infections at a time point with the number of infectious cases at that time, weighted by their respective infectivity.
+- For this estimator, we derived (approximate, pointwise) **95% confidence intervals** using the delta method.
+- However, the size of the confidence intervals reflects only those statistical uncertainties due to the random dynamics of the epidemic. But since the estimator is based on assumptions about the infectivity of the virus, and given that the data are not perfect because of a change of reporting criteria, the amount of testing etc., the estimates should be cautiously interpreted and not be taken at face value. Still, we believe that one can draw qualitatively credible conclusions from them.
+- The code is avalaible [here](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r).
+- Estimates are shown in black, confidence intervals as grey stripes, with values in accordance with the left axis (on a log-scale).
+- The **critical value** for the reproduction number is 1, shown as a red horizontal line: a value larger than one would result in an exponential increase of infections, a value smaller than one in a decrease.
+- The analysis is based on **newly reported cases** of Coronavirus Disease 2019 (COVID-19) per day, shown as blue bars in accordance with the right axis (on a linear scale). For these we rely on the data provided by [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19).
+- The graphics are updated daily<!-- at 2:00 GMT-->, showing data up to yesterday.
+- Note that cases are reported much later than the corresponding day of infection, namely after incubation time plus some more days necessary for testing and reporting the case to the authorities. For simplicity we assume that cases are reported 7 days after infection. Therefore, estimates for the reproduction number lag one week behind the reporting of new cases.
+- In a population where no countermeasures have been put into place, the reproduction number is believed to be given by some value between 2.4 and 3.3. Estimates higher than that might be explained by a considerable number of imported cases before the day being considered.
 
 ### References ###
 
-[1]: Fraser, C. (2007). *Estimating Individual and Household Reproduction
+<a name="ref1">[1]</a>: Fraser, C. (2007). *Estimating Individual and Household Reproduction
 Numbers in an Emerging Epidemic.* PLOS ONE 2 (8), [https://doi.org/10.1371/journal.pone.0000758](https://doi.org/10.1371/journal.pone.0000758).
