--- a/RKI.Rmd
+++ b/RKI.Rmd
@@ -59,7 +59,7 @@ plots <- lapply(regions, function(country_name) {
             pad.zeros = TRUE
         ))
     
-    plot_repronum(estimates, country_name)
+    plot_repronum(estimates, country_name, language = "de")
 })
 
 out <- lapply(seq_along(plots), function(i) {
